tests/operator/negate_nonnum.rz
-"5" // error: unary operator '-' can only be used on numeric types